# _vcr

./: README.md
go/: go.mod  go.sum  httpbin_test.go
go/testdata/fixtures/cassettes/: httpbin_fakestatus_200.yaml  httpbin_status_200.yaml
python/: pyproject.toml
python/tests/: test_httpbin.py
python/tests/cassettes/test_httpbin/: httpbin_fakestatus_200.yaml  httpbin_status_200.yaml
