[tool.poetry]
name = "vcr"
version = "0.1.0"
description = ""
authors = ["kzmake <kzmake.i3a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest-recording = "^0.11.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
